initial version release
* initial version release: 0.1.0
  * add ctix configuration
  * add rollup configuration
  * add just-task configuration

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "typescript-cli-boilerplate",
-  "version": "1.0.0",
-  "description": "TypeScript cli boilerplate",
+  "name": "@maeum/cli-logo",
+  "version": "0.1.0",
+  "description": "logo disply utility for cli toos",
   "engines": {
     "node": ">=14"
   },
   "scripts": {
     "dev": "ts-node src/cli.ts",
+    "ctix:single": "ctix single -c ./.configs/.ctirc -g ./.configs/.ctiignore",
+    "ctix:remove": "ctix remove -c ./.configs/.ctirc -g ./.configs/.ctiignore",
     "test": "jest --coverage",
     "clean": "just --config ./.configs/just.config.ts clean",
     "lint": "just --config ./.configs/just.config.ts lint",
@@ -24,11 +26,19 @@
   "keywords": [],
   "author": "ByungJoon Lee",
   "license": "MIT",
-  "main": "dist/cli.js",
-  "types": "dist/cli.d.ts",
-  "bin": {
-    "nozzle": "dist/cli.js"
+  "main": "dist/cjs/index.cjs",
+  "types": "dist/esm/index.d.ts",
+  "module": "dist/esm/index.mjs",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.cjs",
+      "import": "./dist/esm/index.mjs",
+      "typings": "./dist/esm/index.d.mts"
+    }
   },
+  "files": [
+    "dist"
+  ],
   "bugs": {
     "url": "https://github.com/imjuni/typescript-cli-boilerplate/issues"
   },
@@ -42,6 +52,7 @@
     "@swc/jest": "^0.2.24",
     "@tsconfig/node14": "^1.0.3",
     "@types/cli-progress": "^3.11.0",
+    "@types/figlet": "^1.5.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^14.18.36",
     "@types/source-map-support": "^0.5.6",
@@ -49,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "cross-env": "^7.0.3",
+    "ctix": "^1.8.2",
     "deps-diff": "^1.0.2",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -71,6 +83,7 @@
     "rollup": "^3.17.2",
     "rollup-plugin-dts": "^5.2.0",
     "rollup-plugin-swc3": "^0.8.0",
+    "rollup-plugin-tsconfig-paths": "^1.4.0",
     "ts-jest": "^29.0.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
@@ -80,6 +93,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "cli-progress": "^3.12.0",
+    "figlet": "^1.5.2",
     "find-up": "^5.0.0",
     "my-easy-fp": "^0.19.3",
     "ora": "^5.4.1",
