--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,5 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
-    # - name: Upload coverage to Codecov
-    #   uses: codecov/codecov-action@v3
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
