--- a/package.json
+++ b/package.json
@@ -1,109 +1,107 @@
 {
   "name": "@maeum/cli-logo",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "logo disply utility for cli toos",
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "scripts": {
     "dev": "ts-node src/cli.ts",
-    "ctix:single": "ctix single -c ./.configs/.ctirc -g ./.configs/.ctiignore",
+    "prebuild": "npm run clean",
+    "build": "tsc --incremental --project tsconfig.prod.json",
+    "dts": "tsc --project tsconfig.prod.json --declaration --emitDeclarationOnly --declarationDir dist/types",
+    "dts-alias": "tsc-alias -p ./tsconfig.prod.json --verbose --silent false",
+    "esbuild-cjs": "FORMAT=cjs node .configs/esbuild.mjs",
+    "esbuild-esm": "FORMAT=esm node .configs/esbuild.mjs",
+    "prebundle-pack": "npm run ctix",
+    "bundle-pack": "run-p esbuild-cjs esbuild-esm dts",
+    "postbundle-pack": "npm run ctix:remove",
+    "prebundle": "npm run clean",
+    "bundle": "run-s bundle-pack dts-alias",
+    "prepub": "npm run bundle",
+    "pub": "RELEASE_MODE=true npm publish --registry http://localhost:8901",
+    "unpub": "npm unpublish jin-frame@latest --registry http://localhost:8901 --force",
+    "prepub:prod": "npm run bundle",
+    "pub:prod": "RELEASE_MODE=true npm publish",
+    "clean": "rimraf dist docs",
+    "ctix": "ctix single -c ./.configs/.ctirc -g ./.configs/.ctiignore",
     "ctix:remove": "ctix remove -c ./.configs/.ctirc -g ./.configs/.ctiignore",
     "test": "jest --coverage",
-    "clean": "just --config ./.configs/just.config.ts clean",
-    "lint": "just --config ./.configs/just.config.ts lint",
+    "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
-    "build": "just --config ./.configs/just.config.ts build",
-    "rollup:prod": "just --config ./.configs/just.config.ts rollup:prod",
-    "rollup:dev": "just --config ./.configs/just.config.ts rollup:dev",
-    "pub": "just --config ./.configs/just.config.ts pub",
-    "pub:prod": "just --config ./.configs/just.config.ts pub:prod",
     "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
     "prepublishOnly": "node prepublish.cjs",
     "prepare": "husky install"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/imjuni/typescript-cli-boilerplate.git"
+    "url": "git+https://github.com/maeumjs/cli-logo.git"
   },
   "keywords": [],
   "author": "ByungJoon Lee",
   "license": "MIT",
   "main": "dist/cjs/index.cjs",
-  "types": "dist/esm/index.d.ts",
   "module": "dist/esm/index.mjs",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/cjs/index.cjs",
-      "import": "./dist/esm/index.mjs",
-      "typings": "./dist/esm/index.d.mts"
+      "require": {
+        "default": "./dist/cjs/index.cjs",
+        "types": "./dist/types/index.d.ts"
+      },
+      "import": {
+        "default": "./dist/esm/index.mjs",
+        "types": "./dist/types/index.d.ts"
+      }
     }
   },
   "files": [
     "dist"
   ],
   "bugs": {
-    "url": "https://github.com/imjuni/typescript-cli-boilerplate/issues"
+    "url": "https://github.com/maeumjs/cli-logo.git/issues"
   },
-  "homepage": "https://github.com/imjuni/typescript-cli-boilerplate#readme",
+  "homepage": "https://github.com/maeumjs/cli-logo.git#readme",
   "devDependencies": {
-    "@jest/test-sequencer": "^29.4.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@swc/core": "^1.3.36",
-    "@swc/jest": "^0.2.24",
-    "@tsconfig/node14": "^1.0.3",
-    "@types/cli-progress": "^3.11.0",
-    "@types/figlet": "^1.5.5",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^14.18.36",
-    "@types/source-map-support": "^0.5.6",
-    "@types/yargs": "^17.0.22",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@jest/test-sequencer": "^29.6.4",
+    "@tsconfig/node16": "^16.1.1",
+    "@types/figlet": "^1.5.6",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "cross-env": "^7.0.3",
     "ctix": "^1.8.2",
     "deps-diff": "^1.0.2",
-    "eslint": "^8.34.0",
+    "esbuild": "0.19.2",
+    "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsdoc": "^46.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "execa": "^5.1.1",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "just-task": "^1.7.0",
-    "lint-staged": "^13.1.2",
+    "jest": "^29.6.4",
+    "lint-staged": "^14.0.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
-    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
     "read-pkg": "^5.2.0",
-    "rimraf": "^4.1.2",
-    "rollup": "^3.17.2",
-    "rollup-plugin-dts": "^5.2.0",
-    "rollup-plugin-swc3": "^0.8.0",
-    "rollup-plugin-tsconfig-paths": "^1.4.0",
-    "ts-jest": "^29.0.4",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
+    "tsc-alias": "^1.8.7",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "cli-progress": "^3.12.0",
-    "figlet": "^1.5.2",
-    "find-up": "^5.0.0",
-    "my-easy-fp": "^0.19.3",
-    "ora": "^5.4.1",
-    "pino": "^8.11.0",
-    "pino-pretty": "^9.4.0",
-    "source-map-support": "^0.5.21",
-    "yargs": "^17.7.1"
+    "figlet": "^1.6.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
