Change minimum node.js support version
* [change] minimum node.js support version: 16 > 18
* [change] package manager: npm > pnpm
* [change] .d.ts bundler: tsc-alias > rollup-plugin-dts
* [enhance] complex, long if statement change to switch
* dependency upgrade
  * dev
    * add @tsconfig/node18: 18.2.2
    * add rollup: 3.29.2
    * add rollup-plugin-dts: 6.0.2
    * change @types/node: 16.11.7 > 18.11.9
    * change esbuild: 0.19.2 > 0.19.3
    * remove @tsconfig/node16: 16.1.1
    * remove tsc-alias: 1.8.7

--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
   "name": "@maeum/cli-logo",
   "version": "0.3.0",
-  "description": "logo disply utility for cli toos",
+  "description": "logo disply utility for cli tools",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "scripts": {
-    "dev": "ts-node src/cli.ts",
-    "prebuild": "npm run clean",
-    "build": "tsc --incremental --project tsconfig.prod.json",
-    "dts": "tsc --project tsconfig.prod.json --declaration --emitDeclarationOnly --declarationDir dist/types",
-    "dts-alias": "tsc-alias -p ./tsconfig.prod.json --verbose --silent false",
+    "clean": "rimraf dist",
+    "dev": "tsx src/cli.ts",
+    "debug": "node --inspect-brk -r ts-node/register src/cli.ts",
+    "ctix": "ctix single -p ./tsconfig.prod.json --config .configs/.ctirc -g .configs/.ctiignore",
+    "ctix:remove": "ctix remove -p ./tsconfig.json --config .configs/.ctirc -g .configs/.ctiignore",
+    "build": "pnpm run clean && tsc --incremental --project tsconfig.prod.json",
+    "dts": "tsc --project tsconfig.prod.json --declaration --emitDeclarationOnly --declarationDir dist/types/origin",
+    "dts-gen": "rollup --config ./.configs/rollup.mjs",
+    "dts:clean": "rimraf dist/types/origin",
     "esbuild-cjs": "FORMAT=cjs node .configs/esbuild.mjs",
     "esbuild-esm": "FORMAT=esm node .configs/esbuild.mjs",
-    "prebundle-pack": "npm run ctix",
-    "bundle-pack": "run-p esbuild-cjs esbuild-esm dts",
-    "postbundle-pack": "npm run ctix:remove",
-    "prebundle": "npm run clean",
-    "bundle": "run-s bundle-pack dts-alias",
-    "prepub": "npm run bundle",
-    "pub": "RELEASE_MODE=true npm publish --registry http://localhost:8901",
-    "unpub": "npm unpublish jin-frame@latest --registry http://localhost:8901 --force",
-    "prepub:prod": "npm run bundle",
-    "pub:prod": "RELEASE_MODE=true npm publish",
-    "clean": "rimraf dist docs",
-    "ctix": "ctix single -c ./.configs/.ctirc -g ./.configs/.ctiignore",
-    "ctix:remove": "ctix remove -c ./.configs/.ctirc -g ./.configs/.ctiignore",
+    "bundle-pack": "pnpm run ctix && run-p esbuild-cjs esbuild-esm dts && pnpm run ctix:remove",
+    "bundle": "pnpm clean && run-s bundle-pack dts-gen && pnpm run dts:clean",
     "test": "jest --coverage",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
+    "prettier": "prettier --write src/**/*.ts",
+    "pub": "pnpm run bundle && pnpm publish --registry http://localhost:8901",
+    "unpub": "pnpm unpublish @maeum/cli-logo@$npm_package_version --registry http://localhost:8901 --force",
+    "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
     "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
     "prepublishOnly": "node prepublish.cjs",
     "prepare": "husky install"
@@ -64,16 +61,16 @@
   "homepage": "https://github.com/maeumjs/cli-logo.git#readme",
   "devDependencies": {
     "@jest/test-sequencer": "^29.6.4",
-    "@tsconfig/node16": "^16.1.1",
+    "@tsconfig/node18": "^18.2.2",
     "@types/figlet": "^1.5.6",
     "@types/jest": "^29.5.4",
-    "@types/node": "^16.11.7",
+    "@types/node": "18.11.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "cross-env": "^7.0.3",
     "ctix": "^1.8.2",
     "deps-diff": "^1.0.2",
-    "esbuild": "0.19.2",
+    "esbuild": "0.19.3",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -93,9 +90,10 @@
     "prettier-plugin-organize-imports": "^3.2.3",
     "read-pkg": "^5.2.0",
     "rimraf": "^5.0.1",
+    "rollup": "^3.29.2",
+    "rollup-plugin-dts": "^6.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.7",
     "tslib": "^2.5.0",
     "typescript": "^5.2.2"
   },
